--- a/2016上机题解😊.md
+++ b/2016上机题解😊.md
@@ -49,6 +49,7 @@ int main() {
 
 第二题 给定一个后缀序列，要求求值，只有加减（后缀倒是无所谓）：
    水题，后缀直接用栈做就好了，人家复试都是给前缀，要转换的
+   //假如是11 13 + 15 16 - +  输出结果应该是23
  ```cpp
  
  
