--- a/2016上机题解😊.md
+++ b/2016上机题解😊.md
@@ -47,14 +47,64 @@ int main() {
 }
 ```
 
-第二题 给定一个后缀序列，要求求值，只有加减（后缀倒是无所谓）：
-   水题，后缀直接用栈做就好了，人家复试都是给前缀，要转换的
-   //假如是11 13 + 15 16 - +  输出结果应该是23
+第二题 给定一个后缀序列，要求求值，只有加减（后缀倒是无所谓）：水题，后缀直接用栈做就好了，人家复试都是给前缀，要转换的
+   //我的假如是11 13 + 15 16 - +  输出结果应该是23
  ```cpp
- 
+ 我不是很懂题目的意思，给了数字 中间没空格怎么判断123是1 2 3还是12 3或者1 23呢？也不能限定变量只能属于0~9吧？这也太扯了
+ 那就按照有空格去做
+ #include <cstdio>
+#include <iostream>
+#include <algorithm>
+#include <vector>
+#include <string> 
+#include <cstring>
+#include <cmath>
+#include <map>
+#include <unordered_map>
+#include <queue>
+#include <stack>
+#include <set>
+
+using namespace std;
+
+int main() {
+	freopen("input.txt", "r", stdin);
+	string s;
+	s.resize(100000);
+	stack<int> st;
+	int a, b, c;
+	while(scanf("%s", s.c_str()) != EOF){
+		if(s[0] != '+' && s[0] != '-'){
+			a = stoi(s);
+			st.push(a);
+		}
+		else{
+			b = st.top();
+			st.pop(); 
+			a = st.top(); 
+			st.pop();
+			if(s[0] == '+')
+			{
+				c = a + b;
+			}
+			else
+				c = a - b;
+			st.push(c);
+		}
+	}
+	cout << st.top() << endl;
+	return 0;
+}
  
  ```
 
-第三题 是给定一个字符串，求哈夫曼编码的最短长度：
-    哈夫曼树做，没什么特别要注意的，有好解法，因为你会发现就是求哈夫曼树的非根结点权值之和，或者所有非叶结点之和，想通了这题异常简单，
-    笨方法建树求高度乘上节点的值也可以，建立指针为叶子指向父结点的树型结构，具体题目要求忘了
+第三题 是给定一个字符串，求哈夫曼编码的最短长度
+	我自己在网上找的类似题：
+	输入数据 abbcccdddd
+	输出     19
+```cpp
+
+
+
+
+```
