--- a/2016上机题解😊.md
+++ b/2016上机题解😊.md
@@ -1,5 +1,5 @@
 # FDU2016上机题解
-第一题 给定两个字符串，求最大公共字串的长度 ：  长度小于1000，两个for+string.find暴力可解
+第一题 给定两个字符串，求最大公共字串的长度 ：  长度小于1000
 ```cpp
 #include <cstdio>
 #include <iostream>
@@ -47,7 +47,7 @@ int main() {
 }
 ```
 
-第二题 给定一个后缀序列，要求求值，只有加减（后缀倒是无所谓）：水题，后缀直接用栈做就好了，人家复试都是给前缀，要转换的
+第二题 给定一个后缀序列，要求求值，只有加减（后缀倒是无所谓）
    //我的假如是11 13 + 15 16 - +  输出结果应该是23
  ```cpp
  我不是很懂题目的意思，给了数字 中间没空格怎么判断123是1 2 3还是12 3或者1 23呢？也不能限定变量只能属于0~9吧？这也太扯了
