--- a/2016上机题解😊.md
+++ b/2016上机题解😊.md
@@ -103,7 +103,8 @@ int main() {
 	输入数据 abbcccdddd
 	输出     19
 ```cpp
-
+如果按照我一开始的想法，会先建树，再求每个叶子到根节点（root->value = (for(auto i :n）sum+= a[i]) )高度，想象成
+倒着的树，但是之后发现，哈夫曼编码的最短长度就是priority_queue中除去最后个根value的总和
 
 
 
