--- a/2016上机题解😊.md
+++ b/2016上机题解😊.md
@@ -105,7 +105,42 @@ int main() {
 ```cpp
 如果按照我一开始的想法，会先建树，再求每个叶子到根节点（root->value = (for(auto i :n）sum+= a[i]) )高度，想象成
 倒着的树，但是之后发现，哈夫曼编码的最短长度就是priority_queue中除去最后个根value的总和
-
-
-
+#include <cstdio>
+#include <iostream>
+#include <algorithm>
+#include <vector>
+#include <string> 
+#include <cstring>
+#include <cmath>
+#include <map>
+#include <unordered_map>
+#include <queue>
+#include <stack>
+#include <set>
+using namespace std;
+int main() {
+	freopen("input.txt", "r", stdin);
+	string s;
+	getline(cin, s);
+	unordered_map<char, int> mp;
+	for(int i = 0; i < s.length(); i++){
+		mp[s[i]]++;
+	}
+	priority_queue<int, vector<int> ,greater<int>> q;
+	for(auto it = mp.begin(); it != mp.end(); it++){
+		q.push(it->second);
+	}
+	int sum = 0;
+	while(q.size() > 1){
+		int a = q.top();
+		q.pop();
+		int b = q.top();
+		q.pop();
+		int c = a + b;
+		sum += a + b;
+		q.push(c);
+	}
+	cout << sum << endl;
+	return 0;
+}
 ```
